<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weight_entry">

    <TableLayout
        android:id="@+id/enterWeight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:stretchColumns="*"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/col1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editWeightDate"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:hint="Enter date" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/col2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editWeightWeight"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:hint="Pounds" />

        </TableRow>


    </TableLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enterWeight">

        <Button
            android:id="@+id/buttonSaveWeight"
            android:gravity="center"
            android:onClick="onSaveClick"
            android:text="@string/write_weight"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonCancelSave"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:onClick="openMainForm"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
